Revert "Resolve merge conflicts"
This reverts commit 44616d73a0d7650c4cd09aab3e504eee2ae0bf33, reversing
changes made to 9b19c5a2d99a94ab20493496ff01b17af9b058ed.